--- a/index.html
+++ b/index.html
@@ -394,8 +394,7 @@
           <img src="Neural-cells-Biomaterials.jpg" alt="Project 1">
           <div class="item-info">
             <h3>Project Title: Biomaterials for Nerve Cell Regeneration</h3>
-            <h4>PIs:</h4>
-            <p>Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Shukla</p>
+            <h4>PIs: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Mishra</h4>
             <p>The Interactive Biomaterials for Neural Regeneration (InteReg) project, a five-year collaboration between Johannes Gutenberg University Mainz, the Max Planck Institute for Polymer Research, and the Leibniz Institute for Resilience Research, has secured six million euros from the Carl Zeiss Foundation to develop precision biomaterials for treating neurological diseases. InteReg will focus on creating programmable materials that guide central nervous system cell regeneration following injuries or in conditions like multiple sclerosis. The interdisciplinary team aims to produce solutions such as programmable extracellular matrices for spinal cord repair and nanocarriers targeting oligodendrocyte progenitor cells. With existing patents, start-ups, and clinical trial support available, the project anticipates translating basic research into potential therapeutic applications and will also support young researchers through three new junior groups. This initiative aligns with the Carl Zeiss Foundation's "CZS Breakthroughs" program in life science technologies.</p>
           </div>
         </div>
