--- a/index.html
+++ b/index.html
@@ -402,7 +402,9 @@
               <a href="https://www.carl-zeiss-stiftung.de/en/topics-projects/project-overview/detail/interactive-biomaterials-for-neural-regeneration-intereg" target="_blank" style="text-decoration: none; color: inherit;">
                 Carl Zeiss Foundation
                 </a>to develop precision biomaterials for treating neurological diseases. InteReg will focus on creating programmable materials that guide central nervous system cell regeneration following injuries or in conditions like multiple sclerosis and traumatic injuries (SCI, TBI). Our interdisciplinary team aims to produce solutions such as programmable extracellular matrices for spinal cord repair and nanocarriers targeting oligodendrocyte progenitor cells. </p>
-            <p>In conclusion, the InteReg project at Johannes Gutenberg University Mainz, funded by the Carl Zeiss Foundation, holds significant promise for advancing from basic research to clinical applications. With a strong foundation of 55 patents and two start-ups, the research team is well-equipped to develop innovative biomaterials for nerve cell regeneration. The support from the Interdisciplinary Center for Clinical Trials (IZKS) at the Mainz University Medical Center further enhances the potential for translating these groundbreaking discoveries into effective therapeutic solutions for neurological diseases and injuries.</p>
+            <p>
+              In conclusion, with a strong foundation of 55 patents and two start-ups, our team is well-equipped to develop innovative biomaterials for nerve cell regeneration. The support from the Interdisciplinary Center for Clinical Trials (IZKS) at the Mainz University Medical Center further enhances the potential for translating these groundbreaking discoveries into effective therapeutic solutions for neurological diseases and injuries.
+            </p>
           </div>
         </div>
         <div class="carousel-item">
