--- a/index.html
+++ b/index.html
@@ -354,8 +354,8 @@
           </strong>
         </p>
         <ul>
-          <li>Title: Aptamer Based Electrochemical Sensor for Sensitive Detection of Psychoactive Drugs</li>
-          <li>Supervisor: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Shukla, 
+          <li>Title: Interactive Biomaterials for Neural Regeneration (InteReg)</li>
+          <li>Supervisor: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Mishra, 
             <a href="https://idn.biologie.uni-mainz.de/" target="_blank" class="edu-link">
               Institute of Developmental Biology and Neurobiology (iDN)
             </a>, Germany
@@ -393,7 +393,7 @@
         <div class="carousel-item">
           <img src="Neural-cells-Biomaterials.jpg" alt="Project 1">
           <div class="item-info">
-            <h3>Project Title: Biomaterials for Nerve Cell Regeneration</h3>
+            <h3>PhD Topic: Interactive Biomaterials for Neural Regeneration (InteReg)</h3>
             <h4>PIs: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Mishra</h4>
             <p>The
               <a href="https://intereg.uni-mainz.de/" target="_blank" style="text-decoration: none; color: inherit;">
