--- a/index.html
+++ b/index.html
@@ -51,30 +51,30 @@
       background-color: #38bdf8;
     }
     .hero {
-      padding: 4rem;
+      padding: 3rem 2rem;
       background: linear-gradient(to right, #0f172a, #1e293b);
     }
     .hero h2 {
-      font-size: 3.5rem;
+      font-size: 3rem;
       font-weight: 700;
       color: #38bdf8;
-      margin-bottom: 2.5rem;
+      margin-bottom: 1.5rem;
       text-align: center;
     }
     .hero .about-me-content {
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
-      align-items: flex-start;
-      gap: 2rem;
+      gap: 1.5rem;
     }
     .hero .about-me-text {
-      flex: 0 0 65%;
+      flex: 1 1 60%;
       text-align: justify;
     }
     .hero .about-me-text p {
-      font-size: 1.5rem;
-      line-height: 2;
-      margin-bottom: 2rem;
+      font-size: 1.2rem;
+      line-height: 1.8;
+      margin-bottom: 1rem;
       color: #e2e8f0;
     }
     .hero .about-me-text a {
@@ -85,7 +85,7 @@
       text-decoration: underline;
     }
     .hero .profile-image {
-      flex: 0 0 30%;
+      flex: 1 1 35%;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -93,7 +93,7 @@
     }
     .hero .profile-image img {
       width: 100%;
-      max-width: 400px;
+      max-width: 300px;
       border-radius: 15px;
       object-fit: cover;
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
@@ -101,13 +101,13 @@
     .social-links {
       display: flex;
       justify-content: center;
-      gap: 1.5rem;
+      gap: 1rem;
       margin-top: 1rem;
     }
     .social-links a {
       display: inline-block;
-      width: 50px;
-      height: 50px;
+      width: 40px;
+      height: 40px;
     }
     .social-links a img {
       width: 100%;
@@ -128,7 +128,7 @@
       color: #1e293b;
     }
     .education-section h2 {
-      font-size: 3rem;
+      font-size: 2.5rem;
       font-weight: 700;
       margin-bottom: 2rem;
       text-align: center;
@@ -163,7 +163,7 @@
       font-size: 1.2rem;
       font-weight: bold;
       color: #475569;
-      margin-bottom: 1.5rem;
+      margin-bottom: 1rem;
     }
     .card ul {
       margin-top: 0.5rem;
@@ -187,7 +187,7 @@
       color: #1e293b;
     }
     .research-section h2 {
-      font-size: 3rem;
+      font-size: 2.5rem;
       font-weight: 700;
       margin-bottom: 2rem;
       color: #0f172a;
@@ -253,19 +253,19 @@
       background: rgba(0, 0, 0, 0.8);
     }
     .get-in-touch {
-      padding: 5rem;
+      padding: 4rem;
       background: #0f172a;
       margin-top: 3rem;
       text-align: center;
     }
     .get-in-touch h2 {
-      font-size: 3rem;
+      font-size: 2.5rem;
       font-weight: 700;
       margin-bottom: 2rem;
       color: #38bdf8;
     }
     .get-in-touch p {
-      font-size: 1.2rem;
+      font-size: 1rem;
       line-height: 1.8;
       margin-bottom: 2rem;
       color: #e2e8f0;
@@ -300,7 +300,7 @@
     <div class="about-me-content">
       <div class="about-me-text">
         <p>
-          Welcome to my personal website! I am a Neuroscience Researcher at the
+          Welcome! I am a Neuroscience Researcher at the
           <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
             Institute of Developmental Biology and Neurobiology (iDN)
           </a>, Germany.
@@ -312,11 +312,9 @@
           </a>, in collaboration with the
           <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank">
             Max Planck Institute for Polymer Research
-          </a>, our interdisciplinary team is pioneering new treatments for multiple sclerosis and traumatic brain injuries.
+          </a>, we are pioneering treatments for MS and brain injuries.
         </p>
-        <p>
-          Beyond the lab, I enjoy cooking and exploring new places. If you share an interest in neurobiology, regenerative medicine, or the molecular mechanisms of brain repair, I would love to connect!
-        </p>
+        <p>Beyond research, I enjoy cooking and exploring new places. Let’s connect!</p>
       </div>
       <div class="profile-image">
         <img src="your-profile-picture.jpg" alt="Profile Background Image" />
@@ -355,11 +353,7 @@
         </p>
         <ul>
           <li>Title: Interactive Biomaterials for Neural Regeneration (InteReg)</li>
-          <li>Supervisor: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Mishra, 
-            <a href="https://idn.biologie.uni-mainz.de/" target="_blank" class="edu-link">
-              Institute of Developmental Biology and Neurobiology (iDN)
-            </a>, Germany
-          </li>
+          <li>Supervisor: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Mishra</li>
         </ul>
       </div>
       <div class="card">
@@ -373,15 +367,8 @@
           </strong>
         </p>
         <ul>
-          <li>Master's Dissertation: High-Content Screening for neurite growth analyses: Evaluating gene treatments</li>
-          <li>Supervisor: 
-            <a href="https://www.ccmb.res.in/People/Research-Group/Ishwariya-Venkatesh" target="_blank" class="edu-link">
-              Dr. Ishwariya Venkatesh
-            </a>, 
-            <a href="https://www.ccmb.res.in/" target="_blank" class="edu-link">
-              CSIR-Centre for Cellular and Molecular Biology (CSIR-CCMB)
-            </a>, India
-          </li>
+          <li>Dissertation: High-Content Screening for Neurite Growth Analyses</li>
+          <li>Supervisor: Dr. Ishwariya Venkatesh</li>
         </ul>
       </div>
     </div>
@@ -393,29 +380,10 @@
         <div class="carousel-item">
           <img src="Neural-cells-Biomaterials.jpg" alt="Project 1">
           <div class="item-info">
-            <h3>PhD Topic: Interactive Biomaterials for Neural Regeneration (InteReg)</h3>
+            <h3>Interactive Biomaterials for Neural Regeneration (InteReg)</h3>
             <h4>PIs: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Mishra</h4>
             <p>The
-              <a href="https://intereg.uni-mainz.de/" target="_blank" style="text-decoration: none; color: inherit;">
-              Interactive Biomaterials for Neural Regeneration (InteReg)
-            </a> project, a five-year collaboration between Johannes Gutenberg University Mainz, the Max Planck Institute for Polymer Research, and the Leibniz Institute for Resilience Research, has secured six million euros from the
-              <a href="https://www.carl-zeiss-stiftung.de/en/topics-projects/project-overview/detail/interactive-biomaterials-for-neural-regeneration-intereg" target="_blank" style="text-decoration: none; color: inherit;">
-                Carl Zeiss Foundation
-                </a>to develop precision biomaterials for treating neurological diseases. InteReg will focus on creating programmable materials that guide central nervous system cell regeneration following injuries or in conditions like multiple sclerosis and traumatic injuries (SCI, TBI). Our interdisciplinary team aims to produce solutions such as programmable extracellular matrices for spinal cord repair and nanocarriers targeting oligodendrocyte progenitor cells. The support from the Interdisciplinary Center for Clinical Trials (IZKS) at the Mainz University Medical Center further enhances the potential for translating these groundbreaking discoveries into effective therapeutic solutions for neurological diseases and injuries. </p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="project2.jpg" alt="Project 2">
-          <div class="item-info">
-            <h3>Project Title 2</h3>
-            <p>Brief details about the research, objectives, and outcomes.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="project3.jpg" alt="Project 3">
-          <div class="item-info">
-            <h3>Project Title 3</h3>
-            <p>A quick summary of the research and its significance.</p>
+              <a href="https://intereg.uni-mainz.de/" target="_blank" style="text-decoration: none; color: inherit;">Interactive Biomaterials for Neural Regeneration (InteReg)</a> project, a five-year collaboration between JGU Mainz, Max Planck Institute for Polymer Research, and Leibniz Institute for Resilience Research, is developing precision biomaterials for neurological treatments.</p>
           </div>
         </div>
       </div>
@@ -426,21 +394,10 @@
   <section class="get-in-touch" id="get-in-touch">
     <h2>Get in Touch</h2>
     <p><strong>Email:</strong> arupambiswas007@gmail.com</p>
-    <p><strong>Lab:</strong> Dr Ishwariya Venkatesh, 
-      <a href="https://www.ccmb.res.in/research/labs/venkatesh-lab" target="_blank">
-        Venkatesh Lab
-      </a> CSIR-CCMB
-    </p>
+    <p><strong>Lab:</strong> Dr Ishwariya Venkatesh</p>
     <p><strong>Address:</strong><br>
       Institute for Developmental Biology and Neurobiology (iDN)<br>
       Johannes Gutenberg University Mainz<br>
-      Biozentrum 1<br>
-      Hanns-Dieter-Hüsch-Weg 15<br>
-      55128 Mainz<br>
-      Germany
-    </p>
-    <p>
-      Feel free to reach out regarding research collaborations, speaking engagements, or questions about my work. I'm always open to discussing new ideas and potential partnerships.
     </p>
   </section>
   <footer>
