--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       background-color: #38bdf8;
     }
     .hero {
-      padding: 4rem 2rem;
+      padding: 4rem;
       background: linear-gradient(to right, #0f172a, #1e293b);
     }
     .hero h2 {
@@ -63,18 +63,18 @@
     }
     .hero .about-me-content {
       display: flex;
-      flex-wrap: wrap;
       justify-content: space-between;
+      align-items: flex-start;
       gap: 2rem;
     }
     .hero .about-me-text {
-      flex: 1 1 60%;
+      flex: 0 0 65%;
       text-align: justify;
     }
     .hero .about-me-text p {
       font-size: 1.5rem;
-      line-height: 1.8;
-      margin-bottom: 1.5rem;
+      line-height: 2;
+      margin-bottom: 2rem;
       color: #e2e8f0;
     }
     .hero .about-me-text a {
@@ -85,7 +85,7 @@
       text-decoration: underline;
     }
     .hero .profile-image {
-      flex: 1 1 35%;
+      flex: 0 0 30%;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -93,7 +93,7 @@
     }
     .hero .profile-image img {
       width: 100%;
-      max-width: 300px;
+      max-width: 400px;
       border-radius: 15px;
       object-fit: cover;
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
@@ -354,8 +354,8 @@
           </strong>
         </p>
         <ul>
-          <li>Title: Aptamer Based Electrochemical Sensor for Sensitive Detection of Psychoactive Drugs</li>
-          <li>Supervisor: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Shukla, 
+          <li>Title: Interactive Biomaterials for Neural Regeneration (InteReg)</li>
+          <li>Supervisor: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Mishra, 
             <a href="https://idn.biologie.uni-mainz.de/" target="_blank" class="edu-link">
               Institute of Developmental Biology and Neurobiology (iDN)
             </a>, Germany
@@ -393,21 +393,21 @@
         <div class="carousel-item">
           <img src="Neural-cells-Biomaterials.jpg" alt="Project 1">
           <div class="item-info">
-            <h3>Project Title: Biomaterials for Nerve Cell Regeneration</h3>
-            <h4>PIs:</h4>
-            <p>Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Shukla</p>
-            <p>The 
+            <h3>PhD Topic: Interactive Biomaterials for Neural Regeneration (InteReg)</h3>
+            <h4>PIs: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Mishra</h4>
+            <p>The
               <a href="https://intereg.uni-mainz.de/" target="_blank" style="text-decoration: none; color: inherit;">
-                Interactive Biomaterials for Neural Regeneration (InteReg)
-              </a> project, a five-year collaboration between Johannes Gutenberg University Mainz, the Max Planck Institute for Polymer Research, and the Leibniz Institute for Resilience Research, has secured six million euros from the Carl Zeiss Foundation to develop precision biomaterials for treating neurological diseases. InteReg will focus on creating programmable materials that guide central nervous system cell regeneration following injuries or in conditions like multiple sclerosis. The interdisciplinary team aims to produce solutions such as programmable extracellular matrices for spinal cord repair and nanocarriers targeting oligodendrocyte progenitor cells. With existing patents, start-ups, and clinical trial support available, the project anticipates translating basic research into potential therapeutic applications and will also support young researchers through three new junior groups. This initiative aligns with the Carl Zeiss Foundation's "CZS Breakthroughs" program in life science technologies.</p>
+              Interactive Biomaterials for Neural Regeneration (InteReg)
+            </a> project, a five-year collaboration between Johannes Gutenberg University Mainz, the Max Planck Institute for Polymer Research, and the Leibniz Institute for Resilience Research, has secured six million euros from the
+              <a href="https://www.carl-zeiss-stiftung.de/en/topics-projects/project-overview/detail/interactive-biomaterials-for-neural-regeneration-intereg" target="_blank" style="text-decoration: none; color: inherit;">
+                Carl Zeiss Foundation
+                </a>to develop precision biomaterials for treating neurological diseases. InteReg will focus on creating programmable materials that guide central nervous system cell regeneration following injuries or in conditions like multiple sclerosis and traumatic injuries (SCI, TBI). Our interdisciplinary team aims to produce solutions such as programmable extracellular matrices for spinal cord repair and nanocarriers targeting oligodendrocyte progenitor cells. The support from the Interdisciplinary Center for Clinical Trials (IZKS) at the Mainz University Medical Center further enhances the potential for translating these groundbreaking discoveries into effective therapeutic solutions for neurological diseases and injuries. </p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="project2.jpg" alt="Project 2">
           <div class="item-info">
             <h3>Project Title 2</h3>
-            <h4>PIs:</h4>
-            <p>Details about the PIs for this project.</p>
             <p>Brief details about the research, objectives, and outcomes.</p>
           </div>
         </div>
@@ -415,8 +415,6 @@
           <img src="project3.jpg" alt="Project 3">
           <div class="item-info">
             <h3>Project Title 3</h3>
-            <h4>PIs:</h4>
-            <p>Details about the PIs for this project.</p>
             <p>A quick summary of the research and its significance.</p>
           </div>
         </div>
