--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
     }
     .hero {
       padding: 4rem;
-      background: linear-gradient(to right, #0f172a, #1e293b);
+      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
     }
     .hero h2 {
       font-size: 3.5rem;
       font-weight: 700;
-      color: #38bdf8;
+      color: #fff;
       margin-bottom: 2.5rem;
       text-align: center;
     }
@@ -75,7 +75,7 @@
       font-size: 1.5rem;
       line-height: 2;
       margin-bottom: 2rem;
-      color: #e2e8f0;
+      color: #f8f9fa;
     }
     .hero .about-me-text a {
       color: #38bdf8;
@@ -254,7 +254,7 @@
     }
     .get-in-touch {
       padding: 5rem;
-      background: #0f172a;
+      background: linear-gradient(135deg, #a18cd1, #fbc2eb);
       margin-top: 3rem;
       text-align: center;
     }
@@ -262,13 +262,13 @@
       font-size: 3rem;
       font-weight: 700;
       margin-bottom: 2rem;
-      color: #38bdf8;
+      color: #fff;
     }
     .get-in-touch p {
       font-size: 1.2rem;
       line-height: 1.8;
       margin-bottom: 2rem;
-      color: #e2e8f0;
+      color: #f8f9fa;
     }
     footer {
       margin-top: 2rem;
