--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       background-color: #0f172a;
     }
     nav {
-      background: #1e293b;
+      background: linear-gradient(135deg, #1e40af, #6366f1);
       padding: 1.5rem 2rem;
       display: flex;
       justify-content: space-between;
@@ -28,7 +28,7 @@
     nav h1 {
       font-weight: 700;
       font-size: 1.5rem;
-      color: #38bdf8;
+      color: #ffffff;
     }
     nav ul {
       list-style: none;
@@ -48,16 +48,16 @@
     }
     nav ul li a:hover {
       color: #0f172a;
-      background-color: #38bdf8;
+      background-color: #ffffff;
     }
     .hero {
       padding: 4rem;
-      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+      background: linear-gradient(135deg, #1e3a8a, #3b82f6);
     }
     .hero h2 {
       font-size: 3.5rem;
       font-weight: 700;
-      color: #fff;
+      color: #ffffff;
       margin-bottom: 2.5rem;
       text-align: center;
     }
@@ -75,10 +75,10 @@
       font-size: 1.5rem;
       line-height: 2;
       margin-bottom: 2rem;
-      color: #f8f9fa;
+      color: #e0f2fe;
     }
     .hero .about-me-text a {
-      color: #38bdf8;
+      color: #93c5fd;
       text-decoration: none;
     }
     .hero .about-me-text a:hover {
@@ -115,7 +115,7 @@
       object-fit: contain;
       border-radius: 50%;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
-      background-color: #1e293b;
+      background-color: #2563eb;
       padding: 5px;
     }
     .social-links a img:hover {
@@ -124,15 +124,15 @@
     }
     .education-section {
       padding: 4rem 2rem;
-      background: linear-gradient(to right, #e0f2fe, #f8fafc);
-      color: #1e293b;
+      background: linear-gradient(135deg, #1e40af, #6366f1);
+      color: #ffffff;
     }
     .education-section h2 {
       font-size: 3rem;
       font-weight: 700;
       margin-bottom: 2rem;
       text-align: center;
-      color: #0f172a;
+      color: #ffffff;
     }
     .card-container {
       display: flex;
@@ -254,7 +254,7 @@
     }
     .get-in-touch {
       padding: 5rem;
-      background: linear-gradient(135deg, #a18cd1, #fbc2eb);
+      background: linear-gradient(135deg, #1e3a8a, #2563eb);
       margin-top: 3rem;
       text-align: center;
     }
@@ -262,13 +262,13 @@
       font-size: 3rem;
       font-weight: 700;
       margin-bottom: 2rem;
-      color: #fff;
+      color: #ffffff;
     }
     .get-in-touch p {
       font-size: 1.2rem;
       line-height: 1.8;
       margin-bottom: 2rem;
-      color: #f8f9fa;
+      color: #e0f2fe;
     }
     footer {
       margin-top: 2rem;
