--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     }
     .hero {
       padding: 4rem;
-      background: linear-gradient(135deg, #001f54, #0a1128);
+      background: #0a1128; /* Updated to match the provided color */
     }
     .hero h2 {
       font-size: 3.5rem;
