--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       background-color: #0f172a;
     }
     nav {
-      background: linear-gradient(135deg, #0a1128, #001f54);
+      background: #1e293b;
       padding: 1.5rem 2rem;
       display: flex;
       justify-content: space-between;
@@ -52,7 +52,7 @@
     }
     .hero {
       padding: 4rem;
-      background: #0a1128; /* Updated to match the provided color */
+      background: linear-gradient(to right, #0f172a, #1e293b);
     }
     .hero h2 {
       font-size: 3.5rem;
@@ -115,7 +115,7 @@
       object-fit: contain;
       border-radius: 50%;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
-      background-color: #0a1128;
+      background-color: #1e293b;
       padding: 5px;
     }
     .social-links a img:hover {
@@ -124,15 +124,15 @@
     }
     .education-section {
       padding: 4rem 2rem;
-      background: linear-gradient(135deg, #001f54, #0a1128);
-      color: #f8fafc;
+      background: linear-gradient(to right, #e0f2fe, #f8fafc);
+      color: #1e293b;
     }
     .education-section h2 {
       font-size: 3rem;
       font-weight: 700;
       margin-bottom: 2rem;
       text-align: center;
-      color: #38bdf8;
+      color: #0f172a;
     }
     .card-container {
       display: flex;
@@ -254,7 +254,7 @@
     }
     .get-in-touch {
       padding: 5rem;
-      background: linear-gradient(135deg, #0a1128, #001f54);
+      background: #0f172a;
       margin-top: 3rem;
       text-align: center;
     }
@@ -276,7 +276,7 @@
       text-align: center;
       font-size: 0.9rem;
       color: #94a3b8;
-      background-color: #0a1128;
+      background-color: #1e293b;
     }
     @media (max-width: 768px) {
       .card {
