--- a/index.html
+++ b/index.html
@@ -296,50 +296,47 @@
     </ul>
   </nav>
   <section class="hero" id="about-me">
-    <h2>About Me</h2>
-    <div class="about-me-content">
-      <div class="about-me-text">
-        <p>
-          Welcome to my personal website! I am a Neuroscience Researcher at the
-          <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
-            Institute of Developmental Biology and Neurobiology (iDN)
-          </a>, Germany.
-        </p>
-        <p>
-          At
-          <a href="https://www.uni-mainz.de/" target="_blank">
-            Johannes Gutenberg University Mainz
-          </a>, in collaboration with the
-          <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank">
-            Max Planck Institute for Polymer Research
-          </a>, our interdisciplinary team is pioneering new treatments for multiple sclerosis and traumatic brain injuries.
-        </p>
-        <p>
-          Beyond the lab, I enjoy cooking and exploring new places. If you share an interest in neurobiology, regenerative medicine, or the molecular mechanisms of brain repair, I would love to connect!
-        </p>
-      </div>
-      <div class="profile-image">
-        <img src="your-profile-picture.jpg" alt="Profile Background Image" />
-        <div class="social-links">
-          <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank">
-            <img src="facebookff.jpg" alt="Facebook Logo">
-          </a>
-          <a href="https://www.instagram.com/arupambiswas/" target="_blank">
-            <img src="InstagramF.jpg" alt="Instagram Logo">
-          </a>
-          <a href="https://www.linkedin.com/in/arupam-biswas" target="_blank">
-            <img src="linkedIn.jpg" alt="LinkedIn Logo">
-          </a>
-          <a href="https://x.com/arupamb07" target="_blank">
-            <img src="twitterFL.jpg" alt="X Logo">
-          </a>
-          <a href="mailto:arupambiswas007@gmail.com" target="_blank">
-            <img src="gmail.jpg" alt="Gmail Logo">
-          </a>
-        </div>
+  <h2>About Me</h2>
+  <div class="about-me-content">
+    <div class="about-me-text">
+      <p>
+        Welcome! I am a Neuroscience Researcher at the
+        <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
+          iDN, Germany
+        </a>, focusing on treatments for multiple sclerosis and brain injuries in collaboration with
+        <a href="https://www.uni-mainz.de/" target="_blank">
+          Johannes Gutenberg University Mainz
+        </a> and the
+        <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank">
+          Max Planck Institute for Polymer Research
+        </a>.
+      </p>
+      <p>
+        Besides research, I enjoy cooking and traveling. Let's connect if you're interested in neurobiology, regenerative medicine, or brain repair!
+      </p>
+    </div>
+    <div class="profile-image">
+      <img src="your-profile-picture.jpg" alt="Profile Background Image" />
+      <div class="social-links">
+        <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank">
+          <img src="facebookff.jpg" alt="Facebook Logo">
+        </a>
+        <a href="https://www.instagram.com/arupambiswas/" target="_blank">
+          <img src="InstagramF.jpg" alt="Instagram Logo">
+        </a>
+        <a href="https://www.linkedin.com/in/arupam-biswas" target="_blank">
+          <img src="linkedIn.jpg" alt="LinkedIn Logo">
+        </a>
+        <a href="https://x.com/arupamb07" target="_blank">
+          <img src="twitterFL.jpg" alt="X Logo">
+        </a>
+        <a href="mailto:arupambiswas007@gmail.com" target="_blank">
+          <img src="gmail.jpg" alt="Gmail Logo">
+        </a>
       </div>
     </div>
-  </section>
+  </div>
+</section>
   <section id="education" class="education-section">
     <h2>Education</h2>
     <div class="card-container">
