--- a/index.html
+++ b/index.html
@@ -300,12 +300,12 @@
   <div class="about-me-content">
     <div class="about-me-text">
       <p>
-        Welcome! I am a Neuroscience Researcher at the
+        Welcome to my personal website! I am a Neuroscience Researcher at the
         <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
-          iDN, Germany
-        </a>, focusing on treatments for multiple sclerosis and brain injuries in collaboration with
-        <a href="https://www.uni-mainz.de/" target="_blank">
-          Johannes Gutenberg University Mainz
+          Institute of Developmental Biology and Neurobiology (iDN)
+        </a>, Germany,focusing on treatments for Multiple Sclerosis (MS) and Traumatic injuries (SCI, TBI) in collaboration with
+        <a href="https://lir-mainz.de/en/lir" target="_blank">
+          Leibniz Institute for Resilience Research (LIR)
         </a> and the
         <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank">
           Max Planck Institute for Polymer Research
