--- a/index.html
+++ b/index.html
@@ -303,13 +303,13 @@
         Welcome to my personal website! I am a Neuroscience Researcher at the
         <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
           Institute of Developmental Biology and Neurobiology (iDN)
-        </a>, Germany,focusing on treatments for Multiple Sclerosis (MS) and Traumatic injuries (SCI, TBI) in collaboration with
+        </a>, focusing on treatments for Multiple Sclerosis (MS) and Traumatic injuries (SCI, TBI) in collaboration with
         <a href="https://lir-mainz.de/en/lir" target="_blank">
           Leibniz Institute for Resilience Research (LIR)
         </a> and the
         <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank">
           Max Planck Institute for Polymer Research
-        </a>.
+        </a>, Germany.
       </p>
       <p>
         Besides research, I enjoy cooking and traveling. Let's connect if you're interested in neurobiology, regenerative medicine, or brain repair!
