--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
           Leibniz Institute for Resilience Research (LIR)
         </a> and the
         <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank">
-          Max Planck Institute for Polymer Research
+          Max Planck Institute for Polymer Research (MPI-P)
         </a>, Germany.
       </p>
       <p>
