--- a/index.html
+++ b/index.html
@@ -287,18 +287,18 @@
 </head>
 <body>
   <nav>
-    <h1>Hello, I'm Arupam</h1>
+    <h1> @rupam.</h1>
     <ul>
-      <li><a href="#about-me">About Me</a></li>
+      <li><a href="#hello-i-am-arupam">Hello, I'm Arupam</a></li>
       <li><a href="#education">Education</a></li>
       <li><a href="#research">Research</a></li>
       <li><a href="#get-in-touch">Get in Touch</a></li>
     </ul>
   </nav>
-  <section class="hero" id="about-me">
-  <h2>About Me</h2>
-  <div class="about-me-content">
-    <div class="about-me-text">
+  <section class="hero" id="hello-i-am-arupam">
+  <h2>Hello, I'm Arupam</h2>
+  <div class="hello-i-am-arupam-content">
+    <div class="hello-i-am-arupam-text">
       <p>
         Welcome to my personal website! I am a Neuroscience Researcher at the
         <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
@@ -402,10 +402,11 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="project2.jpg" alt="Project 2">
+          <img src="msdissertation.jpg" alt="Project 2">
           <div class="item-info">
-            <h3>Project Title 2</h3>
-            <p>Brief details about the research, objectives, and outcomes.</p>
+            <h3>Master's Thesis: High-Content Screening for neurite growth analyses: Evaluating gene treatments</h3>
+            <h4>PI: Dr. Ishwariya Venkatesh (Senior Scientist, CSIR-CCMB, India)</h4>
+            <p>Neurons in the central nervous system (CNS), including the brain and spinal cord, send out axons to make connections. In mammals, these axons can't regrow after injury, leading to permanent damage. Research shows that axon growth depends on certain genes called regeneration-associated genes (RAGs). Activating these genes can help axons regrow. However, finding the right combination of genes is challenging. To tackle this, in-vitro phenotypic screening becomes critical for evaluating the effects of these transcription factors (TFs) on neuronal cells. This helps identify potential treatments to promote axon regeneration.</p>
           </div>
         </div>
         <div class="carousel-item">
