--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Arupam Biswas</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet" />
   <style>
+    /* Global Styles */
     * {
       box-sizing: border-box;
       margin: 0;
@@ -50,6 +51,7 @@
       color: #0f172a;
       background-color: #38bdf8;
     }
+    /* Hero Section */
     .hero {
       padding: 4rem;
       background: linear-gradient(to right, #0f172a, #1e293b);
@@ -61,27 +63,27 @@
       margin-bottom: 2.5rem;
       text-align: center;
     }
-    .hero .about-me-content {
+    .hero .hello-i-am-arupam-content {
       display: flex;
       justify-content: space-between;
       align-items: flex-start;
       gap: 2rem;
     }
-    .hero .about-me-text {
+    .hero .hello-i-am-arupam-text {
       flex: 0 0 65%;
       text-align: justify;
     }
-    .hero .about-me-text p {
+    .hero .hello-i-am-arupam-text p {
       font-size: 1.5rem;
       line-height: 2;
       margin-bottom: 2rem;
       color: #e2e8f0;
     }
-    .hero .about-me-text a {
+    .hero .hello-i-am-arupam-text a {
       color: #38bdf8;
       text-decoration: none;
     }
-    .hero .about-me-text a:hover {
+    .hero .hello-i-am-arupam-text a:hover {
       text-decoration: underline;
     }
     .hero .profile-image {
@@ -122,6 +124,7 @@
       transform: scale(1.1);
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
     }
+    /* Education Section */
     .education-section {
       padding: 4rem 2rem;
       background: linear-gradient(to right, #e0f2fe, #f8fafc);
@@ -181,6 +184,7 @@
     .edu-link:hover {
       text-decoration: none;
     }
+    /* Research Section */
     .research-section {
       padding: 4rem 2rem;
       background: linear-gradient(to right, #f8fafc, #e0f2fe);
@@ -252,6 +256,7 @@
     .carousel-button:hover {
       background: rgba(0, 0, 0, 0.8);
     }
+    /* Get in Touch Section */
     .get-in-touch {
       padding: 5rem;
       background: #0f172a;
@@ -287,7 +292,7 @@
 </head>
 <body>
   <nav>
-    <h1> @rupam.</h1>
+    <h1>@rupam.</h1>
     <ul>
       <li><a href="#hello-i-am-arupam">Hello, I'm Arupam</a></li>
       <li><a href="#education">Education</a></li>
@@ -296,47 +301,47 @@
     </ul>
   </nav>
   <section class="hero" id="hello-i-am-arupam">
-  <h2>Hello, I'm Arupam</h2>
-  <div class="hello-i-am-arupam-content">
-    <div class="hello-i-am-arupam-text">
-      <p>
-        Welcome to my personal website! I am a Neuroscience Researcher at the
-        <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
-          Institute of Developmental Biology and Neurobiology (iDN)
-        </a>, focusing on treatments for Multiple Sclerosis (MS) and Traumatic injuries (SCI, TBI) in collaboration with
-        <a href="https://lir-mainz.de/en/lir" target="_blank">
-          Leibniz Institute for Resilience Research (LIR)
-        </a> and the
-        <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank">
-          Max Planck Institute for Polymer Research (MPI-P)
-        </a>, Germany.
-      </p>
-      <p>
-        Besides research, I enjoy cooking and traveling. Let's connect if you're interested in neurobiology, regenerative medicine, or brain repair!
-      </p>
-    </div>
-    <div class="profile-image">
-      <img src="your-profile-picture.jpg" alt="Profile Background Image" />
-      <div class="social-links">
-        <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank">
-          <img src="facebookff.jpg" alt="Facebook Logo">
-        </a>
-        <a href="https://www.instagram.com/arupambiswas/" target="_blank">
-          <img src="InstagramF.jpg" alt="Instagram Logo">
-        </a>
-        <a href="https://www.linkedin.com/in/arupam-biswas" target="_blank">
-          <img src="linkedIn.jpg" alt="LinkedIn Logo">
-        </a>
-        <a href="https://x.com/arupamb07" target="_blank">
-          <img src="twitterFL.jpg" alt="X Logo">
-        </a>
-        <a href="mailto:arupambiswas007@gmail.com" target="_blank">
-          <img src="gmail.jpg" alt="Gmail Logo">
-        </a>
+    <h2>Hello, I'm Arupam</h2>
+    <div class="hello-i-am-arupam-content">
+      <div class="hello-i-am-arupam-text">
+        <p>
+          Welcome to my personal website! I am a Neuroscience Researcher at the
+          <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
+            Institute of Developmental Biology and Neurobiology (iDN)
+          </a>, focusing on treatments for Multiple Sclerosis (MS) and Traumatic injuries (SCI, TBI) in collaboration with
+          <a href="https://lir-mainz.de/en/lir" target="_blank">
+            Leibniz Institute for Resilience Research (LIR)
+          </a> and the
+          <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank">
+            Max Planck Institute for Polymer Research (MPI-P)
+          </a>, Germany.
+        </p>
+        <p>
+          Besides research, I enjoy cooking and traveling. Let's connect if you're interested in neurobiology, regenerative medicine, or brain repair!
+        </p>
+      </div>
+      <div class="profile-image">
+        <img src="your-profile-picture.jpg" alt="Profile Background Image" />
+        <div class="social-links">
+          <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank">
+            <img src="facebookff.jpg" alt="Facebook Logo">
+          </a>
+          <a href="https://www.instagram.com/arupambiswas/" target="_blank">
+            <img src="InstagramF.jpg" alt="Instagram Logo">
+          </a>
+          <a href="https://www.linkedin.com/in/arupam-biswas" target="_blank">
+            <img src="linkedIn.jpg" alt="LinkedIn Logo">
+          </a>
+          <a href="https://x.com/arupamb07" target="_blank">
+            <img src="twitterFL.jpg" alt="X Logo">
+          </a>
+          <a href="mailto:arupambiswas007@gmail.com" target="_blank">
+            <img src="gmail.jpg" alt="Gmail Logo">
+          </a>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
   <section id="education" class="education-section">
     <h2>Education</h2>
     <div class="card-container">
