--- a/index.html
+++ b/index.html
@@ -375,11 +375,11 @@
           </strong>
         </p>
         <ul>
-          <li>Master's Dissertation: High-Content Screening for neurite growth analyses: Evaluating gene treatments</li>
-          <li>Supervisor: 
+          <li>Master's Thesis: High-Content Screening for neurite growth analyses: Evaluating gene treatments</li>
+          <li>Principal Investigator: 
             <a href="https://www.ccmb.res.in/People/Research-Group/Ishwariya-Venkatesh" target="_blank" class="edu-link">
               Dr. Ishwariya Venkatesh
-            </a>, 
+            </a>, Senior Scientist,
             <a href="https://www.ccmb.res.in/" target="_blank" class="edu-link">
               CSIR-Centre for Cellular and Molecular Biology (CSIR-CCMB)
             </a>, India
@@ -396,7 +396,7 @@
           <img src="Neural-cells-Biomaterials.jpg" alt="Project 1">
           <div class="item-info">
             <h3>PhD Topic: Interactive Biomaterials for Neural Regeneration (InteReg)</h3>
-            <h4>PIs: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Mishra</h4>
+            <h4>Principal Investigators: Prof. Dr. Claire Jacob (Group Leader), Prof. Dr. Martin Heine (Group Leader), Dr. Himanshu Kumar Mishra (Junior Group Leader), Institute for Developmental Biology and Neurobiology. </h4>
             <p>The
               <a href="https://intereg.uni-mainz.de/" target="_blank" style="text-decoration: none; color: inherit;">
               Interactive Biomaterials for Neural Regeneration (InteReg)
@@ -410,7 +410,7 @@
           <img src="msdissertation.jpg" alt="Project 2">
           <div class="item-info">
             <h3>Master's Thesis: High-Content Screening for neurite growth analyses: Evaluating gene treatments</h3>
-            <h4>PI: Dr. Ishwariya Venkatesh (Senior Scientist, CSIR-CCMB, India)</h4>
+            <h4>Principal Investigator: Dr. Ishwariya Venkatesh (Senior Scientist, CSIR-CCMB, India)</h4>
             <p>Neurons in the central nervous system (CNS), including the brain and spinal cord, send out axons to make connections. In mammals, these axons can't regrow after injury, leading to permanent damage. Research shows that axon growth depends on certain genes called regeneration-associated genes (RAGs). Activating these genes can help axons regrow. However, finding the right combination of genes is challenging. To tackle this, in-vitro phenotypic screening becomes critical for evaluating the effects of these transcription factors (TFs) on neuronal cells. This helps identify potential treatments to promote axon regeneration.</p>
           </div>
         </div>
