--- a/index.html
+++ b/index.html
@@ -305,10 +305,10 @@
     <div class="hello-i-am-arupam-content">
       <div class="hello-i-am-arupam-text">
         <p>
-          Welcome to my personal website! I am a Neuroscience Researcher at the
+          Welcome! I am a Neuroscience Researcher at the
           <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
             Institute of Developmental Biology and Neurobiology (iDN)
-          </a>, focusing on treatments for Multiple Sclerosis (MS) and Traumatic injuries (SCI, TBI) in collaboration with
+          </a>, focusing on treatments for Multiple Sclerosis(MS) and Traumatic injuries(SCI, TBI) in collaboration with
           <a href="https://lir-mainz.de/en/lir" target="_blank">
             Leibniz Institute for Resilience Research (LIR)
           </a> and the
@@ -352,15 +352,15 @@
           <strong>
             <a href="https://www.uni-mainz.de/" target="_blank" class="edu-link">
               Johannes Gutenberg University Mainz
-            </a>, Germany
+            </a>, Germany.
           </strong>
         </p>
         <ul>
-          <li>Title: Interactive Biomaterials for Neural Regeneration (InteReg)</li>
-          <li>Supervisor: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Mishra, 
+          <li>Title: Interactive Biomaterials for Neural Regeneration.</li>
+          <li>Principal Investigators: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Mishra, 
             <a href="https://idn.biologie.uni-mainz.de/" target="_blank" class="edu-link">
               Institute of Developmental Biology and Neurobiology (iDN)
-            </a>, Germany
+            </a>, Germany.
           </li>
         </ul>
       </div>
@@ -410,7 +410,7 @@
           <img src="msdissertation.jpg" alt="Project 2">
           <div class="item-info">
             <h3>Master's Thesis: High-Content Screening for neurite growth analyses: Evaluating gene treatments</h3>
-            <h4>Principal Investigator: Dr. Ishwariya Venkatesh (Senior Scientist, CSIR-CCMB, India)</h4>
+            <h4>Principal Investigator: Dr. Ishwariya Venkatesh (Senior Scientist, Laboratory of Axon Growth & Regeneration, CSIR-CCMB, India)</h4>
             <p>Neurons in the central nervous system (CNS), including the brain and spinal cord, send out axons to make connections. In mammals, these axons can't regrow after injury, leading to permanent damage. Research shows that axon growth depends on certain genes called regeneration-associated genes (RAGs). Activating these genes can help axons regrow. However, finding the right combination of genes is challenging. To tackle this, in-vitro phenotypic screening becomes critical for evaluating the effects of these transcription factors (TFs) on neuronal cells. This helps identify potential treatments to promote axon regeneration.</p>
           </div>
         </div>
