--- a/index.html
+++ b/index.html
@@ -301,11 +301,11 @@
     </ul>
   </nav>
   <section class="hero" id="hello-i-am-arupam">
-    <h2>Hello, I'm Arupam</h2>
+    <h2>Hi! I'm Arupam</h2>
     <div class="hello-i-am-arupam-content">
       <div class="hello-i-am-arupam-text">
         <p>
-          Welcome! I am a Neuroscience Researcher at the
+          Welcome to my personal website! I am a Neuroscience Researcher at the
           <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
             Institute of Developmental Biology and Neurobiology (iDN)
           </a>, focusing on treatments for Multiple Sclerosis(MS) and Traumatic injuries(SCI, TBI) in collaboration with
