--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
   <nav>
     <h1>@rupam.</h1>
     <ul>
-      <li><a href="#hello-i-am-arupam">Hello, I'm Arupam</a></li>
+      <li><a href="#hello-i-am-arupam">About Me</a></li>
       <li><a href="#education">Education</a></li>
       <li><a href="#research">Research</a></li>
       <li><a href="#get-in-touch">Get in Touch</a></li>
