--- a/index.html
+++ b/index.html
@@ -63,6 +63,24 @@
       margin-bottom: 2.5rem;
       text-align: center;
     }
+    .about-me {
+      max-width: 700px;
+      margin: 2rem auto 3rem auto;
+      padding: 1.5rem 2rem;
+      background: rgba(30,41,59,0.7);
+      border-radius: 12px;
+      text-align: center;
+    }
+    .about-me h3 {
+      font-size: 2rem;
+      color: #38bdf8;
+      margin-bottom: 1rem;
+    }
+    .about-me p {
+      font-size: 1.15rem;
+      line-height: 1.8;
+      color: #e2e8f0;
+    }
     .hero .hello-i-am-arupam-content {
       display: flex;
       justify-content: space-between;
@@ -395,6 +413,16 @@
   </nav>
   <section class="hero" id="hello-i-am-arupam">
     <h2>Hi! I'm Arupam</h2>
+    <section class="about-me">
+      <h3>About Me</h3>
+      <p>
+        I am a passionate Neuroscience researcher driven by curiosity about how the brain heals and adapts. My scientific journey started in India and has taken me to Germany, where I am currently pursuing my PhD at Johannes Gutenberg University Mainz. My work focuses on designing novel biomaterials for neural regeneration, aiming to develop new therapies for brain and spinal cord injuries, as well as neurodegenerative diseases like Multiple Sclerosis.
+        <br><br>
+        Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. I believe that collaboration and open-mindedness are key to driving innovation in science and beyond.
+        <br><br>
+        If you are interested in neurobiology, regenerative medicine, or want to collaborate, feel free to get in touch!
+      </p>
+    </section>
     <div class="hello-i-am-arupam-content">
       <div class="hello-i-am-arupam-text">
         <p>
